benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_iter6_error.log
=== Verification Error - Iteration 6 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp.rs
Time: 2025-09-15 20:38:45

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:49:30
   |
49 |         let bit: u64 = if s@[i as nat] == '1' { 1 } else { 0 };
   |                              ^^^^^^^^

error[E0425]: cannot find value `i` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:37:57
   |
37 |         result@ == Str2Int(s@.subrange(0, (s@.len().min(i as int) as nat))) as u64,
   |                                                         ^ help: a local variable with a similar name exists: `s`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:49:30
   |
49 |         let bit: u64 = if s@[i as nat] == '1' { 1 } else { 0 };
   |                              ^^^^^^^^

error[E0425]: cannot find value `i` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:37:57
   |
37 |         result@ == Str2Int(s@.subrange(0, (s@.len().min(i as int) as nat))) as u64,
   |                                                         ^ help: a local variable with a similar name exists: `s`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
